--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
   h2.console.enabled: true
+
+server:
+  port: 8080
+  servlet:
+    context-path: /hosp-mgmt
