--- a/src/main/resources/application-h2.yml
+++ b/src/main/resources/application-h2.yml
@@ -12,7 +12,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
-  h2.console.enabled: true
+  h2.console:
+    enabled: true
+    settings:
+      web-allow-others: true
 
 server:
   port: 8080
